# hng-dynamic-profile

./: .env  Cargo.toml  README.md  dockerfile  fly.toml
.github/workflows/: c1.yml
src/: main.rs  models.rs
src/config/: mod.rs
src/handlers/: mod.rs  profile.rs
src/metrics/: mod.rs
src/routes/: mod.rs
src/services/: cat_service.rs
src/tests/: integration.rs
